samples/_failures_safe/1761605486_0a5dc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de972eb5.c: In function ‘main’:
./samples/SAFE/__tmp_de972eb5.c:154:16: error: missing terminating " character
  154 |         printf("N/A (not a square
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_de972eb5.c:154:9: error: expected expression at end of input
  154 |         printf("N/A (not a square
      |         ^~~~~~
./samples/SAFE/__tmp_de972eb5.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de972eb5.c:154:9: error: expected declaration or statement at end of input
